force-app/main/default/objects/ProductMix__c/fields/Nurseline_Program__c.field-meta.xml
<CustomField>
    <fullName>Nurseline_Program__c</fullName>
    <label>Nurseline Program</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assistance</fullName>
            </value>
            <value>
                <fullName>Care 24</fullName>
            </value>
            <value>
                <fullName>Not Covered</fullName>
            </value>
            <value>
                <fullName>NurseLine</fullName>
            </value>
            <value>
                <fullName>UHC Care 24</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>