force-app/main/default/objects/ProductMix__c/fields/Onsite_Fitness__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Fitness__c</fullName>
    <label>Onsite Fitness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>