force-app/main/default/objects/ProductMix__c/fields/Optum_Onsite_Health_Promotion_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Optum_Onsite_Health_Promotion_Specialist__c</fullName>
    <label>Optum Onsite Health Promotion Specialist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>