force-app/main/default/objects/ProductMix__c/fields/Orthopedic_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Orthopedic_Solutions__c</fullName>
    <label>Spine and Joint Solutions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Orthopedic Health Support</fullName>
            </value>
            <value>
                <fullName>Orthopedic Health Support with COE</fullName>
            </value>
            <value>
                <fullName>Spine and Joint Solutions</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>