force-app/main/default/objects/ProductMix__c/fields/Out_of_Network_OON_Reimbursement_Prgm__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Network_OON_Reimbursement_Prgm__c</fullName>
    <label>Out-of-Network(OON) Reimbursement Prgm</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - No SSP or Facility R&amp;C Component selected</fullName>
            </value>
            <value>
                <fullName>1 - SSP Fee Negotiations &amp; Discount / Facility R&amp;C $500 O/P &amp; $10000 I/P (ASO GRANDFATHERED ONLY)</fullName>
            </value>
            <value>
                <fullName>3 - SSP Fee Negotiations &amp; Discount / Facility R&amp;C $500 O/P &amp; $5000 I/P</fullName>
            </value>
            <value>
                <fullName>4 - SSP Fee Negotiations &amp; Discount / Facility R&amp;C $500 I/P Only (ASO GRANDFATHERED ONLY)</fullName>
            </value>
            <value>
                <fullName>6 - SSP Fee Negotiations &amp; Discount / NO Facility R&amp;C selected</fullName>
            </value>
            <value>
                <fullName>A - Shared Savings Limited (2.0)</fullName>
            </value>
            <value>
                <fullName>C - Shared Savings, Fee Negotiations, OCM and Data iSight</fullName>
            </value>
            <value>
                <fullName>D - Outlier Cost Management (OCM) ONLY</fullName>
            </value>
            <value>
                <fullName>E - SSP Fee Negotiations &amp; Discount / Facility R&amp;C $500 O/P &amp; $5000 I/P and OCM</fullName>
            </value>
            <value>
                <fullName>F - SSP Fee Negotiations &amp; Discount and OCM / No Facility R&amp;C</fullName>
            </value>
            <value>
                <fullName>H- Shared Savings Limited (2.0) and OCM</fullName>
            </value>
            <value>
                <fullName>L - OCM and Data iSight ONLY</fullName>
            </value>
            <value>
                <fullName>N - Referenced Based Pricing with Naviguard</fullName>
            </value>
            <value>
                <fullName>P - Naviguard - Choice Accountability Model</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>