force-app/main/default/objects/ProductMix__c/fields/Payment_Integrity__c.field-meta.xml
<CustomField>
    <fullName>Payment_Integrity__c</fullName>
    <label>Payment Integrity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Integrity details will be added at a later date. We are working to obtain a source for this information.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>