force-app/main/default/objects/ProductMix__c/fields/Personal_Health_Support_PHS_Program__c.field-meta.xml
<CustomField>
    <fullName>Personal_Health_Support_PHS_Program__c</fullName>
    <label>Personal Health Support (PHS) Program</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom Care Management Units (CCMU)</fullName>
            </value>
            <value>
                <fullName>Custom Personal Health Support (Custom PHS)</fullName>
            </value>
            <value>
                <fullName>Personal Health Support 3.0</fullName>
            </value>
            <value>
                <fullName>Does Not apply</fullName>
            </value>
            <value>
                <fullName>Carve-out</fullName>
            </value>
            <value>
                <fullName>Standard Care Coordination</fullName>
            </value>
            <value>
                <fullName>Personal Health Support 2.0</fullName>
            </value>
            <value>
                <fullName>Mercer Health Advantage</fullName>
            </value>
            <value>
                <fullName>PHS – Total Population Health</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
                <isActive>false</isActive>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>PHS - Total Population Health</fullName>
                <isActive>false</isActive>
                <label>PHS - Total Population Health</label>
            </value>
            <value>
                <fullName>PHS - w/Condition Management and Data Integration</fullName>
                <isActive>false</isActive>
                <label>PHS - w/Condition Management and Data Integration</label>
            </value>
            <value>
                <fullName>PHS - w/Condition Management and NO Data Integration</fullName>
                <isActive>false</isActive>
                <label>PHS - w/Condition Management and NO Data Integration</label>
            </value>
            <value>
                <fullName>PHS - w/NO Condition Management and Data Integration</fullName>
                <isActive>false</isActive>
                <label>PHS - w/NO Condition Management and Data Integration</label>
            </value>
            <value>
                <fullName>PHS - w/NO Condition Management and NO Data Integration</fullName>
                <isActive>false</isActive>
                <label>PHS - w/NO Condition Management and NO Data Integration</label>
            </value>
            <value>
                <fullName>Personal Health Support -PHS 3.0 /with data integration</fullName>
                <isActive>false</isActive>
                <label>Personal Health Support -PHS 3.0 /with data integration</label>
            </value>
            <value>
                <fullName>Personal Health Support -PHS 3.0 /without data integration</fullName>
                <isActive>false</isActive>
                <label>Personal Health Support -PHS 3.0 /without data integration</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>