force-app/main/default/objects/ProductMix__c/fields/Pet_Insurance_FIGO__c.field-meta.xml
<CustomField>
    <fullName>Pet_Insurance_FIGO__c</fullName>
    <label>Pet Insurance (FIGO)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>