force-app/main/default/objects/ProductMix__c/fields/Pharmacy__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy__c</fullName>
    <label>Pharmacy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes-Optum Rx Carve In</fullName>
            </value>
            <value>
                <fullName>Yes-Optum Rx Carve Out</fullName>
            </value>
            <value>
                <fullName>Yes-Optum Direct</fullName>
            </value>
            <value>
                <fullName>Yes-TPA (Aon)</fullName>
            </value>
            <value>
                <fullName>Yes-TPA (Health Action Council)</fullName>
            </value>
            <value>
                <fullName>Yes-TPA (Health Transformation Alliance)</fullName>
            </value>
            <value>
                <fullName>Yes-TPA (HealthTrust Purchasing Group)</fullName>
            </value>
            <value>
                <fullName>Yes-TPA (Mercer)</fullName>
            </value>
            <value>
                <fullName>Yes-TPA (Other)</fullName>
            </value>
            <value>
                <fullName>Yes-TPA (WTW)</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Optum Rx-Carve In</fullName>
                <isActive>false</isActive>
                <label>Optum Rx-Carve In</label>
            </value>
            <value>
                <fullName>Optum Rx-Carve-Out</fullName>
                <isActive>false</isActive>
                <label>Optum Rx-Carve-Out</label>
            </value>
            <value>
                <fullName>Yes-Optum Rx Carve Out Flex / Cross Carrier</fullName>
                <isActive>false</isActive>
                <label>Yes-Optum Rx Carve Out Flex / Cross Carrier</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>