force-app/main/default/objects/ProductMix__c/fields/Radiology_Services__c.field-meta.xml
<CustomField>
    <fullName>Radiology_Services__c</fullName>
    <label>Radiology Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advance Notification Required</fullName>
            </value>
            <value>
                <fullName>Prior Authorization Required</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>