force-app/main/default/objects/ProductMix__c/fields/Rally_Client_above_base__c.field-meta.xml
<CustomField>
    <fullName>Rally_Client_above_base__c</fullName>
    <label>Rally Client (above base)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>