force-app/main/default/objects/ProductMix__c/fields/Real_Appeal__c.field-meta.xml
<CustomField>
    <fullName>Real_Appeal__c</fullName>
    <label>Real Appeal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Real Appeal Applies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>