force-app/main/default/objects/ProductMix__c/fields/Retiree_Reimbursement_Account_RRA__c.field-meta.xml
<CustomField>
    <fullName>Retiree_Reimbursement_Account_RRA__c</fullName>
    <label>Retiree Reimbursement Account (RRA)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>