force-app/main/default/objects/ProductMix__c/fields/Second_Opinion_Services_2nd_MD__c.field-meta.xml
<CustomField>
    <fullName>Second_Opinion_Services_2nd_MD__c</fullName>
    <label>Second Opinion Services (2nd MD)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes - 2nd MD (Optum)</fullName>
            </value>
            <value>
                <fullName>Yes - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>