force-app/main/default/objects/ProductMix__c/fields/Shared_Savings_Program_Facility_R_C__c.field-meta.xml
<CustomField>
    <fullName>Shared_Savings_Program_Facility_R_C__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Out-of-Network(OON) Reimbursement Prgm</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>