force-app/main/default/objects/ProductMix__c/fields/Site_of_Service_SOS_Office_Based__c.field-meta.xml
<CustomField>
    <fullName>Site_of_Service_SOS_Office_Based__c</fullName>
    <label>Site of Service (SOS)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prior Authorization Required</fullName>
            </value>
            <value>
                <fullName>Excluded</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>