force-app/main/default/objects/ProductMix__c/fields/Site_of_Service_SOS_Outpatient_Facility__c.field-meta.xml
<CustomField>
    <fullName>Site_of_Service_SOS_Outpatient_Facility__c</fullName>
    <label>zz_Site of Service - Outpatient Facility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prior Authorization Required</fullName>
            </value>
            <value>
                <fullName>Excluded</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>