force-app/main/default/objects/ProductMix__c/fields/Smoking_Cessation__c.field-meta.xml
<CustomField>
    <fullName>Smoking_Cessation__c</fullName>
    <label>Smoking Cessation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Quit for Life</fullName>
            </value>
            <value>
                <fullName>Quit Power</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>