force-app/main/default/objects/ProductMix__c/fields/Surgical_Management_Solution_SMS__c.field-meta.xml
<CustomField>
    <fullName>Surgical_Management_Solution_SMS__c</fullName>
    <label>Specialist Management Solution (SMS)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>