force-app/main/default/objects/ProductMix__c/fields/Tiered_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Tiered_Benefits__c</fullName>
    <label>zz_Tiered Benefits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>