force-app/main/default/objects/ProductMix__c/fields/UHC_Cobra_Administration__c.field-meta.xml
<CustomField>
    <fullName>UHC_Cobra_Administration__c</fullName>
    <label>UHC Cobra Administration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>