force-app/main/default/objects/ProductMix__c/fields/UHC_Motion__c.field-meta.xml
<CustomField>
    <fullName>UHC_Motion__c</fullName>
    <label>zz_UHC Motion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>