force-app/main/default/objects/ProductMix__c/fields/UHC_UMR_Member_Service_and_Tools__c.field-meta.xml
<CustomField>
    <fullName>UHC_UMR_Member_Service_and_Tools__c</fullName>
    <label>zz_UHC/UMR Member Service and Tools</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Accolade</fullName>
                <isActive>false</isActive>
                <label>Accolade</label>
            </value>
            <value>
                <fullName>Included Health</fullName>
                <isActive>false</isActive>
                <label>Included Health</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Quantum</fullName>
                <isActive>false</isActive>
                <label>Quantum</label>
            </value>
            <value>
                <fullName>UMR</fullName>
                <isActive>false</isActive>
                <label>UMR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>