force-app/main/default/objects/ProductMix__c/fields/UMR_COBRA_Services__c.field-meta.xml
<CustomField>
    <fullName>UMR_COBRA_Services__c</fullName>
    <label>zz_UMR COBRA Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>