force-app/main/default/objects/ProductMix__c/fields/Wellness_and_Wellness_Coaching__c.field-meta.xml
<CustomField>
    <fullName>Wellness_and_Wellness_Coaching__c</fullName>
    <label>Wellness and Wellness Coaching</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>