force-app/main/default/objects/ProductMix__c/fields/Wellness_Rally__c.field-meta.xml
<CustomField>
    <fullName>Wellness_Rally__c</fullName>
    <label>Wellness-Rally</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>