force-app/main/default/objects/ProductMix__c/fields/Women_s_Health__c.field-meta.xml
<CustomField>
    <fullName>Women_s_Health__c</fullName>
    <label>Women&apos;s Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>