force-app/main/default/objects/ProductMix__c/listViews/All_UHG_Products.listView-meta.xml
<ListView>
    <fullName>All_UHG_Products</fullName>
    <columns>NAME</columns>
    <columns>AccountFirm__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AccountFirm__c</field>
        <operation>contains</operation>
        <value>Wells</value>
    </filters>
    <label>All UHG Products</label>
</ListView>